fixed issues with option menu
Options menu was not responsive and appeared underneath the vertical dividers

--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -51,11 +51,13 @@
     width: 300px;
     height: 400px;
     top: 70px;
+    right: 0px;
     background-color: white;
     border-bottom: 1px solid grey;
     border-left: 1px solid grey;
     border-bottom-left-radius: 10px;
     justify-content: center;
+    z-index: 2;
 }
 
 .settings-button {
